--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Tushar Tilwani</title>
+    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>-->
 </head>
@@ -44,10 +45,10 @@
             <img src="css/imgs/tushar.jpg" id='img' />
             </div>
             <ul id='nav-links'>
-                <li><a href='#n_home' data-scroll-nav="0">home</a></li>
-                <li><a href='#n_aboutMe' data-scroll-nav="1">aboutme</a></li>
-                <li><a href='#n_myWorks' data-scroll-nav="2">mywork</a></li>
-                <li><a href='#n_contactMe' data-scroll-nav="3">contact</a></li>
+                <li><a href='#n_home' data-scroll-nav="0">Home<i class="fa fa-home"></i></a></li>
+                <li><a href='#n_aboutMe' data-scroll-nav="1">ABOUT ME<i class="fa fa-user"></i></a></li>
+                <li><a href='#n_myWorks' data-scroll-nav="2">PORTFOLIO<i class="fa  fa-desktop"></i></a></li>
+                <li><a href='#n_contactMe' data-scroll-nav="3">CONTACT ME<i class="fa fa-phone"></i></a></li>
             </ul>
         </nav>
         </div>
